feat: :sparkles: finish logout user dev, remain test
