# src/section/auth/controller/auth_controller.go
@@ -2,10 +2,13 @@ package auth_controller
 
 import (
 	"MVC_DI/gen/api"
+	"MVC_DI/global/enum"
 	auth_dto "MVC_DI/section/auth/dto"
 	auth_service "MVC_DI/section/auth/service"
+	"MVC_DI/security"
 	controller_uitl "MVC_DI/util/controller"
 	"MVC_DI/vo/resp"
+
 	"github.com/gin-gonic/gin"
 	"github.com/sirupsen/logrus"
 )
@@ -20,11 +23,13 @@ func (ctrl *AuthController) Hello(ctx *gin.Context) *resp.TResponse {
 }
 
 func (ctrl *AuthController) LoginUser(ctx *gin.Context) *resp.TResponse {
-	userLoginRequest, validationError := controller_uitl.BindValidation[api.UserLoginRequest](ctx)
 	response := resp.NewResponse()
+
+	userLoginRequest, validationError := controller_uitl.BindValidation[api.UserLoginRequest](ctx)
 	if validationError != nil {
 		return response.ValidationError(validationError)
 	}
+
 	userLoginDto := auth_dto.UserLoginDto{
 		Secret:     userLoginRequest.Secret,
 		Identifier: userLoginRequest.Identifier,
@@ -34,6 +39,24 @@ func (ctrl *AuthController) LoginUser(ctx *gin.Context) *resp.TResponse {
 	if err != nil {
 		return response.SystemError(err)
 	}
-	authSessionResponse := api.AuthSessionResponse{SessionId: &userLoginRespDto.SessionId, Token: &userLoginRespDto.Token}
+
+	security.SetSessionId(ctx, userLoginRespDto.SessionId, 3600, "/", "", true, true)
+	authSessionResponse := api.AuthSessionResponse{Token: &userLoginRespDto.Token}
 	return response.SuccessWithData(authSessionResponse)
+}
+
+func (ctrl *AuthController) LogoutUser(ctx *gin.Context) *resp.TResponse {
+	response := resp.NewResponse()
+
+	sessionId := security.GetSessionId(ctx)
+	if sessionId == nil {
+		return response.AllArgsConstructor(enum.CODE.MISSING_TOKEN, enum.MSG.MISSING_TOKEN, nil)
+	}
+
+	err := ctrl.AuthService.LogoutUser(ctx, *sessionId)
+	if err != nil {
+		return response.SystemError(err)
+	}
+
+	return response.Success()
 }
